Copy/Pasting a mesh immediately crashes blender #52415

Closed
opened 2017-08-16 11:38:19 +02:00 by Kosyne · 4 comments

Affected versions

blender-2.80.0-git.1b462e5-windows64 VS 2015
blender-2.80.0-git.b68b26c-windows64
blender-2.80.0-git.b68b26c-windows32

In addition, I've been on-and-off testing the VS2015 x64 version since the beginning of the month, and have had this issue since then, I do not know the last commit where this wasn't a problem.

Steps to reproduce

  1. Open default scene in blender.
  2. Select cube
  3. Press ctrl+c, then ctrl+v
  4. CRASH

It does not leave a *.crash.txt file either. However, if it may help, here is the copybuffer.blend: copybuffer.blend

Details

This seems to only happen with meshes, as I also tested copypasting the light and camera with no problem.

**Affected versions** blender-2.80.0-git.1b462e5-windows64 VS 2015 blender-2.80.0-git.b68b26c-windows64 blender-2.80.0-git.b68b26c-windows32 In addition, I've been on-and-off testing the VS2015 x64 version since the beginning of the month, and have had this issue since then, I do not know the last commit where this wasn't a problem. **Steps to reproduce** 1. Open default scene in blender. 2. Select cube 3. Press ctrl+c, then ctrl+v 4. CRASH It does not leave a *.crash.txt file either. However, if it may help, here is the copybuffer.blend: [copybuffer.blend](https://archive.blender.org/developer/F714171/copybuffer.blend) **Details** This seems to only happen with meshes, as I also tested copypasting the light and camera with no problem.
Author

Changed status to: 'Open'

Changed status to: 'Open'
Author

Added subscriber: @Kosyne

Added subscriber: @Kosyne
Dalai Felinto self-assigned this 2017-08-16 12:05:05 +02:00

This issue was referenced by 6bca0dcf7b

This issue was referenced by 6bca0dcf7bd6c071f0b03234ac448d5e8e15fdc5

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#52415
No description provided.